@@ -17,6 +17,7 @@ import airbnb.dao.HostsDao;
 import airbnb.dao.ListingsDao;
 import airbnb.model.Hosts;
 import airbnb.model.ListingFilter;
+import airbnb.model.insights.AvgAccommodatesByYear;
 
 /**
  * Servlet implementation class SearchServlet
@@ -33,13 +34,39 @@ public class SearchServlet extends HttpServlet {
 	private static final String PARAM_AMENITIES = "amenities";
 	private static final String PARAM_PROPERTY_LOCATION = "propertyLocation";
 	private static final String PARAM_LISTING_NAME = "listingName";
+	private static final String PARAM_PRICE = "propertyPrice";
+	private static final String PARAM_SECURITY_DEPOSIT = "securityDeposit";
+	private static final String PARAM_CLEANING_FEE = "cleaningFee";
+	private static final String PARAM_CANCELLATION_POLICY = "cancellationPolicy";
+	private static final String PARAM_GUESTS_INCLUDED = "guestsIncluded";
+	private static final String PARAM_MINIMUM_NIGHTS = "minimumNights";
+	private static final String PARAM_MAXIMUM_NIGHTS = "maximumNights";
+	private static final String PARAM_ACCOMMODATES = "accommodates";
+	private static final String PARAM_BATHROOMS = "bathrooms";
+	private static final String PARAM_BEDROOMS = "bedrooms";
+	private static final String PARAM_BEDS = "beds";
+	private static final String PARAM_ROOM_TYPE = "roomType";
+	private static final String PARAM_BEDTYPE = "bedtype";
 	
-	private Map<String, String> responseTimeMap = Map.of(
+	private static final Map<String, String> responseTimeMap = Map.of(
 	        "within_a_day", "within a day",
 	        "within_a_few_hours", "within a few hours",
 	        "within_an_hour", "within an hour",
 	        "a_few_days_or_more", "a few days or more"
 	);
+	private static final Map<String, String> bedTypeMap = Map.of(
+            "REAL_BED", "REAL BED",
+            "PULL_OUT_SOFA", "PULL-OUT SOFA",
+            "FUTON", "FUTON",
+            "AIRBED", "AIRBED",
+            "COUCH", "COUCH"
+    );
+	
+	private static final Map<String, String> roomTypeMap = Map.of(
+            "ENTIRE_HOME_APT", "ENTIRE HOME/APT",
+            "PRIVATE_ROOM", "PRIVATE ROOM",
+            "SHARED_ROOM", "SHARED ROOM"
+    );
 	
 	private HashMap<String, String> propertyTypeMap = new HashMap<>();
 	protected void populateMap() {
@@ -90,7 +117,6 @@ public class SearchServlet extends HttpServlet {
 	    propertyTypeMap.put("OTHER", "OTHER");
 	}
 	
-	
     /**
      * @see HttpServlet#HttpServlet()
      */
@@ -132,9 +158,31 @@ public class SearchServlet extends HttpServlet {
 		String propertyType = request.getParameter(PARAM_PROPERTYTYPE);
 		String propertyAmenities = request.getParameter(PARAM_AMENITIES);
 		String propertyLocation = request.getParameter(PARAM_PROPERTY_LOCATION);
+		String propertyPrice = request.getParameter(PARAM_PRICE);
+		String securityDeposity = request.getParameter(PARAM_SECURITY_DEPOSIT);
+		String cleaningFee = request.getParameter(PARAM_CLEANING_FEE);
+		String cancellationPolicy = request.getParameter(PARAM_CANCELLATION_POLICY);
+		String guestsIncluded = request.getParameter(PARAM_GUESTS_INCLUDED);
+		String minimumNights = request.getParameter(PARAM_MINIMUM_NIGHTS);
+		String maximumNights = request.getParameter(PARAM_MAXIMUM_NIGHTS);
+		
+		String bedtype = request.getParameter(PARAM_BEDTYPE);
+		String roomType = request.getParameter(PARAM_ROOM_TYPE);
+		String beds = request.getParameter(PARAM_BEDS);
+		String bedrooms = request.getParameter(PARAM_BEDROOMS);
+		String bathrooms = request.getParameter(PARAM_BATHROOMS);
+		String accommodates = request.getParameter(PARAM_ACCOMMODATES);
+	   
 		ListingsDao listingsDao = ListingsDao.getInstance();
 		
-		List<ListingFilter> filteredListingsResult = listingsDao.getAllListingWithOtherTablesInfo();
+		List<ListingFilter> filteredListingsResult = (List<ListingFilter>) getServletContext().getAttribute("filteredListingsResult");
+		
+		if (filteredListingsResult == null) {
+			filteredListingsResult = listingsDao.getAllListingWithOtherTablesInfo(); 
+			// Store the data in the application scope
+	        getServletContext().setAttribute("filteredListingsResult", filteredListingsResult);
+		}
+		
 		boolean hasFilter = false;
 		
 		if(listingName != null && !listingName.trim().isEmpty()) {
@@ -158,7 +206,7 @@ public class SearchServlet extends HttpServlet {
 			hasFilter = true;
 			filteredListingsResult = filteredListingsResult.stream()
 			        .filter(listing -> listing.getAmenities().toLowerCase().contains(propertyAmenities.toLowerCase()))
-			        .toList();
+			        .collect(Collectors.toList());
 		}
 		
 		if (propertyLocation != null && !propertyLocation.trim().isEmpty()) {
@@ -171,7 +219,135 @@ public class SearchServlet extends HttpServlet {
 		        )
 		        .collect(Collectors.toList());
 		}
-
+		
+		if (propertyPrice != null && !propertyPrice.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int price = Integer.parseInt(propertyPrice);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getPrice() == price)
+		        .collect(Collectors.toList());
+		}
+		
+		if (securityDeposity != null && !securityDeposity.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int security = Integer.parseInt(securityDeposity);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getSecurityDeposit() == security)
+		        .collect(Collectors.toList());
+		}
+		
+		if (cleaningFee != null && !cleaningFee.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int fee = Integer.parseInt(cleaningFee);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getCleaningFee() == fee)
+		        .collect(Collectors.toList());
+		}
+		
+		if (cancellationPolicy != null && !cancellationPolicy.trim().isEmpty()) {
+    		hasFilter = true;
+    		filteredListingsResult = filteredListingsResult.stream()
+    	            .filter(listing -> cancellationPolicy.equalsIgnoreCase(listing.getCancellationPolicy()))
+    	            .collect(Collectors.toList());
+    	}
+		
+		if (guestsIncluded != null && !guestsIncluded.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int guests = Integer.parseInt(guestsIncluded);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getGuestsIncluded() == guests)
+		        .collect(Collectors.toList());
+		}
+		
+		if (minimumNights != null && !minimumNights.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int minNights = Integer.parseInt(minimumNights);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getMinimumNights() == minNights)
+		        .collect(Collectors.toList());
+		}
+		
+		if (maximumNights != null && !maximumNights.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int maxNights = Integer.parseInt(maximumNights);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getMaximumNights() == maxNights)
+		        .collect(Collectors.toList());
+		}
+		
+		if(bedtype != null && !bedtype.trim().isEmpty()) {
+			String stringBedType = bedTypeMap.getOrDefault(bedtype, "");
+	    	if (!stringBedType.isEmpty()) {
+	    		hasFilter = true;
+	    		filteredListingsResult = filteredListingsResult.stream()
+	    	            .filter(listing -> stringBedType.equalsIgnoreCase(listing.getBedtype()))
+	    	            .collect(Collectors.toList());
+	    	}
+		}
+		
+		if(roomType != null && !roomType.trim().isEmpty()) {
+			String stringRoomType = roomTypeMap.getOrDefault(roomType, "");
+	    	if (!stringRoomType.isEmpty()) {
+	    		hasFilter = true;
+	    		filteredListingsResult = filteredListingsResult.stream()
+	    	            .filter(listing -> stringRoomType.equalsIgnoreCase(listing.getRoomType()))
+	    	            .collect(Collectors.toList());
+	    	}
+		}
+    	
+    	
+    	if (beds != null && !beds.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int bedNumber = Integer.parseInt(beds);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getBeds() == bedNumber)
+		        .collect(Collectors.toList());
+		}
+    	
+    	if (bedrooms != null && !bedrooms.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int bedroomsNumber = Integer.parseInt(bedrooms);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getBedrooms() == bedroomsNumber)
+		        .collect(Collectors.toList());
+		}
+    	
+    	if (bathrooms != null && !bathrooms.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    float bathroomsFloat = Float.parseFloat(bathrooms);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getBathrooms() == bathroomsFloat)
+		        .collect(Collectors.toList());
+		}
+    	
+    	if (accommodates != null && !accommodates.trim().isEmpty()) {
+		    hasFilter = true;
+		   
+    	    int accommodatesNumber = Integer.parseInt(accommodates);
+    	    
+		    filteredListingsResult = filteredListingsResult.stream()
+		        .filter(listing -> listing.getAccommodates() == accommodatesNumber)
+		        .collect(Collectors.toList());
+		}
+		
 		return hasFilter ? filteredListingsResult : null;
 	}
 
@@ -184,13 +360,19 @@ public class SearchServlet extends HttpServlet {
 	     
         HostsDao hostDao = HostsDao.getInstance();
     	boolean hasFilter = false;
-        List<Hosts> filteredHosts = hostDao.getAllHosts();
+        List<Hosts> filteredHosts = (List<Hosts>) getServletContext().getAttribute("filteredHosts");
+	
+		if (filteredHosts == null) {
+			filteredHosts = hostDao.getAllHosts(); 
+			// Store the data in the application scope
+	        getServletContext().setAttribute("filteredHosts", filteredHosts);
+		}
         
     	if (hostName != null && !hostName.trim().isEmpty()) {
     		hasFilter = true;
     	    filteredHosts = filteredHosts.stream()
     	            .filter(host -> hostName.equalsIgnoreCase(host.getHostName()))
-    	            .toList();
+    	            .collect(Collectors.toList());
     	}
     	
     	String responseTimeStr = responseTimeMap.getOrDefault(hostResponseTime, "");
@@ -198,7 +380,7 @@ public class SearchServlet extends HttpServlet {
     		hasFilter = true;
     	    filteredHosts = filteredHosts.stream()
     	            .filter(host -> responseTimeStr.equalsIgnoreCase(host.getHostResponseTime()))
-    	            .toList();
+    	            .collect(Collectors.toList());
     	}
     	
     	if (hostResponseRate != null && !hostResponseRate.trim().isEmpty()) {
@@ -206,7 +388,7 @@ public class SearchServlet extends HttpServlet {
     	    int rate = Integer.parseInt(hostResponseRate);
     	    filteredHosts = filteredHosts.stream()
     	            .filter(host -> rate == host.getHostResponseRate())
-    	            .toList();
+    	            .collect(Collectors.toList());
     	}
 			
 		if(hostTotalListingCount != null && !hostTotalListingCount.trim().isEmpty()) {
@@ -214,14 +396,14 @@ public class SearchServlet extends HttpServlet {
 			int count = Integer.parseInt(hostTotalListingCount);
 			 filteredHosts = filteredHosts.stream()
                      .filter(host -> count == host.getHostTotalListingCount())
-                     .toList();
+                     .collect(Collectors.toList());
 		}
 			
 		if(hostVerification != null && !hostVerification.trim().isEmpty()) {
 			hasFilter = true;
 			filteredHosts = filteredHosts.stream()
 			        .filter(host -> host.getHostVerification().toLowerCase().contains(hostVerification.toLowerCase()))
-			        .toList();
+			        .collect(Collectors.toList());
 		}
 	        
 		return hasFilter ? filteredHosts : null;
